--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-native-safe-area-context": "4.8.2",
 		"react-native-screens": "~3.29.0",
 		"react-native-track-player": "^4.1.1",
+		"react-native-web": "^0.21.1",
 		"ts-pattern": "^5.0.8",
 		"zustand": "^4.5.2"
 	},
